--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>hallooo</title>
+        <title>lisawww</title>
+        <meta name="keywords" content="design, graphic, designer, grafisk, visuell, kommunikasjon, communicator, visual, lisa, wigum, kjærås">
+        <link rel="stylesheet" href="css/styles.css" type="text/css" >
+        <link rel="shortcut icon" type="image/x-icon" href="smiley.png"/>
     </head>
     <body>
-        <p1>her er bodyen.</p1>
-        <p>her skjer det snart noe kult.</p>
-    </body>
+        <table>
+            <tr>
+                <th>Cyberspace Under Construction
+                    <!-- <div id="close">&times;</div> -->
+                </th>
+            </tr>
+            </tr>
+            <tr>
+                <td>Please wait while I watch a lot of YouTube videos and learn how to code ... </td>
+            </tr> 
+        </table>
+</body>
 </html>
