--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
         <title>lisawww</title>
         <meta name="keywords" content="design, graphic, designer, grafisk, visuell, kommunikasjon, communicator, visual, lisa, wigum, kjærås">
         <link rel="stylesheet" href="css/styles.css" type="text/css" >
-        <link rel="shortcut icon" type="image/x-icon" href="smiley.png"/>
-    </head>
-    <body>
+        <link rel="icon" type="image/x-icon" href="favicon.png">
+</head>
+<body>
+      <!-- <div class="grid-container">
+            <div class="grid-item">1</div>
+            <div class="grid-item">2</div>
+            <div class="grid-item">3</div>
+            <div class="grid-item">4</div>
+            <div class="grid-item">5</div>
+            <div class="grid-item">6</div>
+            <div class="grid-item">7</div>
+            <div class="grid-item">8</div>
+            <div class="grid-item">9</div>
+          </div> -->
         <table>
             <tr>
-                <th>Cyberspace Under Construction
+                <th>Cyberspace under construction
                     <!-- <div id="close">&times;</div> -->
                 </th>
             </tr>
