--- a/lisawww/index.html
+++ b/lisawww/index.html
@@ -4,30 +4,40 @@
         <title>lisawww</title>
         <meta name="keywords" content="design, graphic, designer, grafisk, visuell, kommunikasjon, communicator, visual, lisa, wigum, kjærås">
         <link rel="stylesheet" href="css/styles.css" type="text/css" >
-        <link rel="icon" type="image/x-icon" href="{{ favicon.png| relative_url }}">
+        <link rel="icon" type="image/x-icon" href="favicon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-      <!-- <div class="grid-container">
-            <div class="grid-item">1</div>
-            <div class="grid-item">2</div>
-            <div class="grid-item">3</div>
-            <div class="grid-item">4</div>
-            <div class="grid-item">5</div>
-            <div class="grid-item">6</div>
-            <div class="grid-item">7</div>
-            <div class="grid-item">8</div>
-            <div class="grid-item">9</div>
-          </div> -->
-        <table>
-            <tr>
-                <th>Cyberspace under construction
-                    <!-- <div id="close">&times;</div> -->
-                </th>
-            </tr>
-            </tr>
-            <tr>
-                <td>Please wait while I watch a lot of YouTube videos and learn how to code ... </td>
-            </tr> 
-        </table>
+  <main>
+    <div class="grid">
+                <div class="logo"><h1>lis<span class="aww">awww</span></h1><!--<p class="open">24/7</p>!--></div>
+                <div class="menu">
+                    <li><a href="mailto: lisawigum@gmail.com>"> e-mail, </a></li>
+                    <li><a href="https://www.linkedin.com/in/lisawigum" target="_blank"><span class="in">linkedin</span></a></li>
+                </div>
+            <div class="info"><h1>*Constructing cyberspace*</h1>
+                <p> Please wait while I
+                    learn how to code. <br>
+                    And script.<br>
+                    Make my own font.<br>  
+                    Be my most authentic self.<br>  
+                    Plaster a wall. <br> 
+                    Establish and maintain healthy relationships.<br>  
+                    Get a firm butt.<br>
+                    Not give a fuck. <br>
+                    Set healthy boundaries.<br> 
+                    Poach an egg. <br> 
+                    Get a bird out of my kitchen vent.<br>
+                    Ban smalltalk. <br> 
+                    Make a table. <br> 
+                    Go to bed early. <br>
+                    Heal from childhood trauma. <br>  
+                    Do a front flip. <br>
+                    Maintain focus. <br> 
+                     </p>
+            </div>
+    </main>  
 </body>
 </html>
+
+<!--1 em is equal to 16px (default size of browser) if not stated otherwise, so 2 ems equal 32 px etc. -->
