--- a/lisawww/index.html
+++ b/lisawww/index.html
@@ -10,10 +10,10 @@
 <body>
   <main>
     <div class="grid">
-                <div class="logo"><h1>lis<span class="aww">awww</span></h1><!--<p class="open">24/7</p>!--></div>
+                <div class="logo">lis<span class="aww">awww</span><!--<p class="open">24/7</p>!--></div>
                 <div class="menu">
-                    <li><a href="mailto: lisawigum@gmail.com>"> e-mail, </a></li>
-                    <li><a href="https://www.linkedin.com/in/lisawigum" target="_blank"><span class="in">linkedin</span></a></li>
+                    <div class="mail"><li><a href="mailto: lisawigum@gmail.com>"> lisawigum@gmail.com, </a></li></div>
+                    <li><a href="https://www.linkedin.com/in/lisawigum" target="_blank">linkedin</a></li>
                 </div>
             <div class="info"><h1>*Constructing cyberspace*</h1>
                 <p> Please wait while I
