--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="mail"><li><a href="mailto: lisawigum@gmail.com>"> lisawigum@gmail.com, </a></li></div>
                     <li><a href="https://www.linkedin.com/in/lisawigum" target="_blank">linkedin</a></li>
                 </div>
-            <div class="info"><h1>*Constructing cyberspace*</h1>
+            <div class="info"><h1>*Building cyberspace*</h1>
                 <p> Please wait while I
                     learn how to code. <br>
                     And script.<br>
@@ -29,8 +29,7 @@
                     Get a bird out of my kitchen vent.<br>
                     Ban smalltalk. <br> 
                     Make a table. <br> 
-                    Go to bed early. <br>
-                    Heal from childhood trauma. <br>  
+                    Go to bed early. <br> 
                     Do a front flip. <br>
                     Maintain focus. <br> 
                      </p>
