--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     Make a table. <br> 
                     Go to bed early. <br> 
                     Do a front flip. <br>
-                    Maintain focus. <br> 
+                    And maintain focus. <br> 
                      </p>
             </div>
     </main>  
