--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>lisawww</title>
+        <title>lisa</title>
         <meta name="keywords" content="design, graphic, designer, grafisk, visuell, kommunikasjon, communicator, visual, lisa, wigum, kjærås">
         <link rel="stylesheet" href="css/styles.css" type="text/css" >
         <link rel="icon" type="image/x-icon" href="favicon.png">
@@ -10,28 +10,25 @@
 <body>
   <main>
     <div class="grid">
-                <div class="logo">lis<span class="aww">awww</span><!--<p class="open">24/7</p>!--></div>
-                <div class="menu">
+                <div class="logo">lis<span class="a">a</span><span class="w">www </span><div class="info">&nbsp;under construction</div><!--<p class="open">24/7</p>!--></div>
+               <!--- <div class="menu">
                     <div class="mail"><li><a href="mailto: lisawigum@gmail.com>"> lisawigum@gmail.com, </a></li></div>
                     <li><a href="https://www.linkedin.com/in/lisawigum" target="_blank">linkedin</a></li>
-                </div>
-            <div class="info"><h1>*Building cyberspace*</h1>
-                <p> Please wait while I
-                    learn how to code. <br>
-                    And script.<br>
-                    Make my own font.<br>  
-                    Be my most authentic self.<br>  
-                    Plaster a wall. <br> 
-                    Establish and maintain healthy relationships.<br>  
-                    Get a firm butt.<br>
-                    Set healthy boundaries.<br> 
-                    Poach an egg. <br> 
-                    Get a bird out of my kitchen vent.<br>
-                    Ban smalltalk. <br> 
-                    Make a table. <br> 
-                    Go to bed early. <br> 
-                    Do a front flip. <br>
-                    And maintain focus. <br> 
+                </div>-->
+                <p> please wait while I
+                    learn how to code <br>
+                    and script<br>
+                    make my own font<br>  
+                    be my most authentic self<br>  
+                    plaster a wall<br>
+                    get a firm butt<br>
+                    set healthy boundaries<br> 
+                    go to bed at a reasonable hour<br> 
+                    heal from childhood trauma<br>
+                    make a table<br>  
+                    think before I talk<br>
+                    play the guitar <br>
+                    aaand maintain focus. <br>
                      </p>
             </div>
     </main>  
