--- a/index.html
+++ b/index.html
@@ -16,19 +16,24 @@
                     <li><a href="https://www.linkedin.com/in/lisawigum" target="_blank">linkedin</a></li>
                 </div>-->
                 <p> please wait while I
+                    heal my wrist tendonitis<br>
                     learn how to code <br>
                     and script<br>
+                    trust myself<br>
                     make my own font<br>  
-                    be my most authentic self<br>  
                     plaster a wall<br>
                     get a firm butt<br>
+                    be more present<br>
                     set healthy boundaries<br> 
+                    get to know my own taste<br>
+                    learn how to sing<br>
                     go to bed at a reasonable hour<br> 
-                    heal from childhood trauma<br>
-                    make a table<br>  
-                    think before I talk<br>
+                    quit sugar<br>
+                    process and heal from trauma<br>
+                    make a table<br> 
+                    pause before I talk<br>
                     play the guitar <br>
-                    aaand maintain focus. <br>
+                    and focus on one thing at a time. <br>
                      </p>
             </div>
     </main>  
