--- a/index.html
+++ b/index.html
@@ -15,25 +15,29 @@
                     <div class="mail"><li><a href="mailto: lisawigum@gmail.com>"> lisawigum@gmail.com, </a></li></div>
                     <li><a href="https://www.linkedin.com/in/lisawigum" target="_blank">linkedin</a></li>
                 </div>-->
-                <p> please wait while I
+                <p> Please wait while I
                     heal my wrist tendonitis<br>
                     learn how to code <br>
                     and script<br>
+                    sing<br>
                     trust myself<br>
                     make my own font<br>  
+                    have the confidence of a mediocre white man<br>
                     plaster a wall<br>
                     get a firm butt<br>
-                    be more present<br>
-                    set healthy boundaries<br> 
-                    get to know my own taste<br>
-                    learn how to sing<br>
-                    go to bed at a reasonable hour<br> 
+                    make a budget<br>
+                    and stick to it<br>
+                    become more present<br>
                     quit sugar<br>
-                    process and heal from trauma<br>
+                    set healthy boundaries<br> 
+                    go to bed at a reasonable hour<br> 
+                    make soft and moist (terrible word) cinnamon buns<br>
+                    process trauma<br>
                     make a table<br> 
                     pause before I talk<br>
-                    play the guitar <br>
-                    and focus on one thing at a time. <br>
+                    and write<br>
+                    meditate<br>
+                    and focus on one thing at a time!! <br>
                      </p>
             </div>
     </main>  
