--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     heal my wrist tendonitis<br>
                     learn how to code <br>
                     and script<br>
-                    sing<br>
                     trust myself<br>
+                    sing<br>
                     make my own font<br>  
                     have the confidence of a mediocre white man<br>
                     plaster a wall<br>
@@ -31,12 +31,11 @@
                     quit sugar<br>
                     set healthy boundaries<br> 
                     go to bed at a reasonable hour<br> 
-                    make soft and moist (terrible word) cinnamon buns<br>
+                    make soft and moist (terrible word!?) cinnamon buns<br>
                     process trauma<br>
                     make a table<br> 
                     pause before I talk<br>
                     and write<br>
-                    meditate<br>
                     and focus on one thing at a time!! <br>
                      </p>
             </div>
