--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                     process trauma<br>
                     make a table<br> 
                     pause before I talk<br>
-                    and write<br>
-                    and focus on one thing at a time!! <br>
+                    and focus on one thing at a time.<br>
                      </p>
             </div>
     </main>  
