--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>lisa</title>
+        <title>Lisa</title>
         <meta name="keywords" content="design, graphic, designer, grafisk, visuell, kommunikasjon, communicator, visual, lisa, wigum, kjærås">
         <link rel="stylesheet" href="css/styles.css" type="text/css" >
         <link rel="icon" type="image/x-icon" href="favicon.png">
@@ -10,7 +10,7 @@
 <body>
   <main>
     <div class="grid">
-                <div class="logo">lis<span class="a">a</span><span class="w">www </span><div class="info">&nbsp;under construction</div><!--<p class="open">24/7</p>!--></div>
+                <div class="logo">Lis<span class="a">a</span><span class="w">www </span><div class="info">&nbsp;under construction</div><!--<p class="open">24/7</p>!--></div>
                <!--- <div class="menu">
                     <div class="mail"><li><a href="mailto: lisawigum@gmail.com>"> lisawigum@gmail.com, </a></li></div>
                     <li><a href="https://www.linkedin.com/in/lisawigum" target="_blank">linkedin</a></li>
