--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>Lisa</title>
+        <title>hi</title>
         <meta name="keywords" content="design, graphic, designer, grafisk, visuell, kommunikasjon, communicator, visual, lisa, wigum, kjærås">
         <link rel="stylesheet" href="css/styles.css" type="text/css" >
         <link rel="icon" type="image/x-icon" href="favicon.png">
