--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <div class="grid">
-                <div class="logo">Lis<span class="a">a</span><span class="w">www </span><div class="info">&nbsp;under construction</div><!--<p class="open">24/7</p>!--></div>
+                <div class="logo">lis<span class="a">a</span><span class="w">www </span><div class="info">&nbsp;under construction</div><!--<p class="open">24/7</p>!--></div>
                <!--- <div class="menu">
                     <div class="mail"><li><a href="mailto: lisawigum@gmail.com>"> lisawigum@gmail.com, </a></li></div>
                     <li><a href="https://www.linkedin.com/in/lisawigum" target="_blank">linkedin</a></li>
