--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="mail"><li><a href="mailto: lisawigum@gmail.com>"> lisawigum@gmail.com, </a></li></div>
                     <li><a href="https://www.linkedin.com/in/lisawigum" target="_blank">linkedin</a></li>
                 </div>-->
-                <p> Please wait while I
+                <p> please wait while I
                     heal my wrist tendonitis<br>
                     learn how to code <br>
                     and script<br>
