--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
                     <div class="mail"><li><a href="mailto: lisawigum@gmail.com>"> lisawigum@gmail.com, </a></li></div>
                     <li><a href="https://www.linkedin.com/in/lisawigum" target="_blank">linkedin</a></li>
                 </div>-->
-                <p> please wait while I
-                    heal my wrist tendonitis<br>
+                <p> please wait while I.. <br>
                     learn how to code <br>
                     and script<br>
                     sing<br>
