--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
     const texts = [
       "lisa wigum kjærås", 
       "relasjonsbygger", 
-      "reality-entusiast", 
       "problemløser", 
       "hobbypsykolog", 
       "statist", 
@@ -71,11 +70,11 @@
       "mosjonist", 
       "lilleskje", 
       "storeskje", 
-      "skuespiller?", 
-      "komiker??", 
-      "programleder???", 
-      "radiovertinne????", 
-      "din nye kollega?????"
+      "skuespiller (ish)", 
+      "komiker?", 
+      "radiovertinne?",
+      "programleder?", 
+      "din nye kollega??"
     ];
 
     const interval = 800;  
