--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       "skuespiller (ish)", 
       "komiker?", 
       "radiovertinne?",
-      "programleder?", 
-      "din nye kollega??"
+      "programleder??", 
+      "din nye samarbeidspartner???"
     ];
 
     const interval = 800;  
